[*]#GEN - Add swagger definition

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+*.csv
+*.dat
+*.iml
+*.pid
+*.seed
+*.sublime-*
+*.swo
+*.swp
+*.tgz
+.idea
+.vscode
+.project
+.strong-pm
 node_modules
+build
+npm-debug.log
+.tmp
+log
