--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NODE_ENV=development
-HOST=0.0.0.0
-PORT=3010
+NODE_ENV=production
+HOST=
+PORT=
 API_VERSION=1
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
