--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --inspect src/index.js",
+    "dev": "nodemon --inspect src/register.js",
     "db-migrate": "sequelize db:migrate",
     "db-migrate:undo": "sequelize db:migrate:undo:all",
     "db-seed": "sequelize db:seed:all",
-    "db-seed:undo": "sequelize db:seed:undo:all"
+    "db-seed:undo": "sequelize db:seed:undo:all",
+    "lint": "eslint \"src/**/*.js\" --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/register": "^7.10.1",
+    "@babel/runtime": "^7.10.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "dotenv": "^8.2.0",
@@ -23,9 +31,17 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/node": "^7.10.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
+    "eslint-plugin-import": "^2.20.2",
     "nodemon": "^2.0.3"
   }
 }
