Added password and email attributes to user's schema. Added email, password validations

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "ecmaVersion": 2018
   },
   "rules": {
+		"arrow-parens": "off",
     "no-bitwise": ["error", { "allow": ["~"] }],
     "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": true }],
     "max-len": ["error", { "code": 120 }],
