--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --inspect src/register.js",
+    "dev": "nodemon --inspect-brk src/register.js",
     "db-migrate": "sequelize db:migrate",
     "db-migrate:undo": "sequelize db:migrate:undo:all",
     "db-seed": "sequelize db:seed:all",
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "node-notifier": "^7.0.0",
     "pg": "^8.0.2",
     "pg-hstore": "^2.3.3",
