--- a/.env.development
+++ b/.env.development
@@ -9,3 +9,6 @@ POSTGRES_USER=sequelize-test-root
 # POSTGRES_DATABASE=sequelize-test
 POSTGRES_DATABASE=sequelize-test-root
 POSTGRES_PASSWORD=paW0rd!123@
+JWT_PUBLIC_KEY_BASE64=
+PEPPER=pepper_secret_test_sequelize_69
+CRYPTO_SECRET=890DSAkl23)-223lp)!@
