Added authentication module and helpers

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ NODE_ENV=production
 HOST=
 PORT=
 API_VERSION=1
+AUTHORIZATION_HEADER=
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
 POSTGRES_EXTERNAL_PORT=5432
@@ -9,6 +10,9 @@ POSTGRES_USER=sequelize-test-root
 # POSTGRES_DATABASE=sequelize-test
 POSTGRES_DATABASE=sequelize-test-root
 POSTGRES_PASSWORD=paW0rd!123@
+JWT_SECRET=masasd@ee324Ddfsd
+JWT_ACCESS_EXPIRES_IN=1h
+JWT_REFRESH_EXPIRES_IN=1w
 JWT_PUBLIC_KEY_BASE64=
-PEPPER=pepper_secret_test_sequelize_69
-CRYPTO_SECRET=890DSAkl23)-223lp)!@
+PEPPER=prod_pepper_secret_test_sequelize_69
+CRYPTO_SECRET=4059gGRstr!@dfgf@!)-)
