Start creating clean up invalid tokens

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ HOST=
 PORT=
 API_VERSION=1
 AUTHORIZATION_HEADER=
+CRON_CHECK_INVALID_TOKENS_DELAY_SECS=3600
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
 POSTGRES_EXTERNAL_PORT=5432
