--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,7 @@ HOST=0.0.0.0
 PORT=3010
 API_VERSION=1
 AUTHORIZATION_HEADER=Authorization
+CRON_CHECK_INVALID_TOKENS_DELAY_SECS=3600
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
 POSTGRES_EXTERNAL_PORT=5432
