--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
