--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "node-notifier": "^7.0.0",
     "pg": "^8.0.2",
     "pg-hstore": "^2.3.3",
