Containerize web server

--- a/.env
+++ b/.env
@@ -1,19 +1,22 @@
 NODE_ENV=production
-HOST=
-PORT=
+HOST=0.0.0.0
+PORT=3010
 API_VERSION=1
-AUTHORIZATION_HEADER=
+AUTHORIZATION_HEADER=Authorization
 CRON_CHECK_INVALID_TOKENS_DELAY_SECS=3600
-POSTGRES_HOST=0.0.0.0
-POSTGRES_PORT=5432
-POSTGRES_EXTERNAL_PORT=5432
-POSTGRES_USER=sequelize-test-root
-# POSTGRES_DATABASE=sequelize-test
-POSTGRES_DATABASE=sequelize-test-root
-POSTGRES_PASSWORD=paW0rd!123@
+CRYPTO_SECRET=4059gGRstr!@dfgf@!)-)
 JWT_SECRET=masasd@ee324Ddfsd
 JWT_ACCESS_EXPIRES_IN=1h
 JWT_REFRESH_EXPIRES_IN=1w
 JWT_PUBLIC_KEY_BASE64=
-PEPPER=prod_pepper_secret_test_sequelize_69
-CRYPTO_SECRET=4059gGRstr!@dfgf@!)-)
+PEPPER=prod_pepper_secret_test_sequelize_64
+POSTGRES_HOST=0.0.0.0
+POSTGRES_PORT=5433
+POSTGRES_EXTERNAL_PORT=5433
+POSTGRES_USER=sequelize-test-root
+POSTGRES_DATABASE=sequelize-test
+#POSTGRES_DATABASE=sequelize-test-root
+POSTGRES_PASSWORD=paW0rd!123@
+TEMP_DIR=/tmp/
+UPLOAD_MAX_FILESIZE_MB=50
+
