--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,12 @@ PORT=3010
 API_VERSION=1
 AUTHORIZATION_HEADER=Authorization
 CRON_CHECK_INVALID_TOKENS_DELAY_SECS=3600
+CRYPTO_SECRET=890DSAkl23)-223lp)!@
+JWT_SECRET=!qwerty_ASD_petrol
+JWT_ACCESS_EXPIRES_IN=1h
+JWT_REFRESH_EXPIRES_IN=1w
+JWT_PUBLIC_KEY_BASE64=
+PEPPER=pepper_secret_test_sequelize_69
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
 POSTGRES_EXTERNAL_PORT=5432
@@ -11,9 +17,5 @@ POSTGRES_USER=sequelize-test-root
 # POSTGRES_DATABASE=sequelize-test
 POSTGRES_DATABASE=sequelize-test-root
 POSTGRES_PASSWORD=paW0rd!123@
-JWT_SECRET=!qwerty_ASD_petrol
-JWT_ACCESS_EXPIRES_IN=1h
-JWT_REFRESH_EXPIRES_IN=1w
-JWT_PUBLIC_KEY_BASE64=
-PEPPER=pepper_secret_test_sequelize_69
-CRYPTO_SECRET=890DSAkl23)-223lp)!@
+TEMP_DIR=/tmp/
+UPLOAD_MAX_FILESIZE_MB=50
