--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --inspect src/register.js",
+    "start": "node src/register.js",
     "db-migrate": "sequelize db:migrate",
     "db-migrate:undo": "sequelize db:migrate:undo:all",
     "db-seed": "sequelize db:seed:all",
     "db-seed:undo": "sequelize db:seed:undo:all",
-    "lint": "eslint \"src/**/*.js\" --fix"
+    "lint": "eslint \"src/**/*.js\" --fix",
+    "lint:js:fix": "eslint --quiet --color --no-error-on-unmatched-pattern --fix ./src --ext .js"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +28,7 @@
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
